# komatag

./: .envrc  .gitignore  .gitmodules  Cargo.toml  README.md  flake.nix
scripts/: cxgen_library.py  komatag_library.py
src/: archive.rs  bangumi.rs  comic_info.rs  filename_parser.rs  main.rs
