[package]
name = "komatag"
version = "0.1.0"
edition = "2021"
description = "CLI tool to generate ComicInfo.xml for comic archives (.zip, .cbz, .7z)"
license = "MIT"

[[bin]]
name = "komatag"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# Archive formats
zip = "2"
sevenz-rust = "0.6"

# Error handling
anyhow = "1"
thiserror = "1"

# Filename parsing
regex = "1"

# Bangumi API
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
